--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@
 *.so
 *.dylib
 .env
-
+api
 # Test binary, built with `go test -c`
 *.test
 
@@ -13,4 +13,4 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
